fix bug in pause button, add z-index 1

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -75,4 +75,5 @@ body {
     right: 0px;
     position: absolute;
     bottom: 0px;
+    z-index: 1;
 }
